syntax = "proto3";

import "google/protobuf/any.proto";

// Client API for RSM

message Response {
  enum Status {
    NotALeader = 0;
    Commited = 1;
  };
  Status status = 1;
  google.protobuf.Any result = 2;
}

message Request {
  uint64 request_id = 1;
  uint64 client_id = 2;
  google.protobuf.Any command = 3;
}

service RaftApi {
  rpc Execute(Request) returns (Response) {}
}

// Raft internal rpc's

message LogEntry {
  uint64 term = 1;
  Request request = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResult {
  uint64 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  uint64 term = 1;
  uint64 candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResult {
  uint64 term = 1;
  bool vote_granted = 2;
}

service RaftInternals {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResult) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResult) {}
}
